[package]
name = "bevy_hooked"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replace_with = "0.1.7"
crossbeam-channel = "0.5"
bevy = { path = "../bevy" }